fix overflow behavior

--- a/packages/core/src/components/tooltip/tooltip.scss
+++ b/packages/core/src/components/tooltip/tooltip.scss
@@ -19,15 +19,6 @@
   overflow: visible;
 }
 
-.tooltip-title {
-  display: flex;
-  align-items: center;
-
-  ::slotted(ix-icon) {
-    margin-right: 0.35rem;
-  }
-}
-
 .tooltip-container {
   display: block;
   position: relative;
@@ -39,6 +30,19 @@
 
   box-shadow: var(--theme-shadow-4);
   border-radius: 0.25rem;
+}
+
+.tooltip-title {
+  display: flex;
+  align-items: center;
+
+  ::slotted(ix-icon) {
+    margin-right: 0.35rem;
+  }
+}
+
+.tooltip-content {
+  overflow: auto;
 }
 
 .arrow,
